--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -1,4 +1,4 @@
-name: publish image to docker hub
+name: A new mbed-os is released on main branch 
 
 # The workflow is split into several sub jobs
 # 1. prepare-tags: 
@@ -21,23 +21,11 @@ name: publish image to docker hub
 #    3. latest
 #    This can be move with another workflow
 
-on:
-  schedule:
-    - cron:  '15 4 * * *'
-    
+# cannot combine with on push on branch as on tags needs to be executed without path exclusion
+on:    
   push:
-    # on push master build a new image master-latest for example application
-    # on push 5.15 build a new image 5.15-latest for example application
-    # on release 5.15 build a new image 5.15-stable for example application
-    # on manul 
-    # at night ??
-    branches: [ master, lts, mbed-os-env ]
-
-    paths:
-      - docker_images/mbed-os-env/**
-      - .github/workflows/docker_management/deploy.yml
-
-  workflow_dispatch:
+    tags: 
+      - mbed-os-6.[0-9]+.[0-9]+
 
 jobs:
   prepare-tags:
@@ -47,7 +35,7 @@ jobs:
       - 
         name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/tags/})"
         id: extract_branch
 
       -
@@ -56,14 +44,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - 
-        name: Find the latest tag on the branch
-        id: mbed_os_version
-        shell: bash
-        run: |
-          value=`git describe --tags --abbrev=0  --match mbed-os-*.[0-9]`
-          echo "TAG is $value"
-          echo "::set-output name=tag::$value"
+      # - 
+      #   name: Find the latest tag on the branch
+      #   id: mbed_os_version
+      #   shell: bash
+      #   run: |
+      #     value=`git describe --tags --abbrev=0  --match mbed-os-*.[0-9]`
+      #     echo "TAG is $value"
+      #     echo "::set-output name=tag::$value"
 
       - 
         name: Set UUID
@@ -97,7 +85,6 @@ jobs:
           name: build-info
           path: build_info
           
-
 
   build-container:
     runs-on: ubuntu-latest
@@ -222,6 +209,14 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - 
+        name: Find DEV DOCKER DIGEST
+        id: docker_info_dev
+        run: |
+          DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
+          echo "::set-output name=DIGEST::$DIGEST"
+          echo "Docker DIGEST: $DIGEST"
+
+      - 
         name: test the container
         id: test
         uses: addnab/docker-run-action@v3
@@ -230,7 +225,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           options: -v ${{ github.workspace }}:/work -w=/work
-          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
           shell: bash
           run: |
             set -e
@@ -286,5 +281,5 @@ jobs:
       - 
         name: Delete Dev image
         run: |
-          python ./.github/workflows/docker_management/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.ANOTHER_GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          # python ./.github/workflows/docker_management/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.ANOTHER_GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          # python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
