--- a/.github/workflows/docker_management.passive-update-main.yml
+++ b/.github/workflows/docker_management.passive-update-main.yml
@@ -1,31 +1,10 @@
-name: A new mbed-os is released on main branch 
+name: publish image to docker hub
 
-# The workflow is split into several sub jobs
-# 1. prepare-tags: 
-#    This step finds the latest mbed-os version (in terms of product version not date)
-#    and generates a unique dev version for the image. 
-#    The DEV docker tag takes the format of dev-<MBED_OS_VERSION>-<human readable date>-<UUID>
-# 2. build-container:
-#    The dev version of image is built here and pushed to docker hub.
-#    When multiarch image is built docker buildx doesn't support exporting to docker
-#    Hence, need to push to a registry (dockerhub).
-# 3. test-container:
-#    This tests the dev docker images
-# 4. deploy-container
-#    At this point, docker image marked as "dev" is ready to tag as "prod"
-#    Also, deletes the dev tag
-#    The dev images that didn't succeed is kept in docker hub for troubleshooting purposes.
-#    Published docker tags are:
-#    1. <MBED_OS_VERSION>-latest
-#    2. <MBED_OS_VERSION>-<human readable date>
-#    3. latest
-#    This can be move with another workflow
+on:
+  schedule:
+    - cron:  '*/10 * * * *'
 
-# cannot combine with on push on branch as on tags needs to be executed without path exclusion
-on:    
-  push:
-    tags: 
-      - mbed-os-6.[0-9]+.[0-9]+
+  # workflow_dispatch:
 
 jobs:
   prepare-tags:
@@ -35,23 +14,24 @@ jobs:
       - 
         name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/tags/})"
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
 
       -
         name: Checkout
         uses: actions/checkout@v2
         with:
+          ref: master
           fetch-depth: 0
 
-      # - 
-      #   name: Find the latest tag on the branch
-      #   id: mbed_os_version
-      #   shell: bash
-      #   run: |
-      #     value=`git describe --tags --abbrev=0  --match mbed-os-*.[0-9]`
-      #     echo "TAG is $value"
-      #     echo "::set-output name=tag::$value"
+      - 
+        name: Find the latest tag on the branch
+        id: mbed_os_version
+        shell: bash
+        run: |
+          value=`git describe --tags --abbrev=0  --match mbed-os-*.[0-9]`
+          echo "TAG is $value"
+          echo "::set-output name=tag::$value"
 
       - 
         name: Set UUID
@@ -68,14 +48,14 @@ jobs:
         run: |
           mkdir -p build_info
           date=$(date +"%Y.%m.%dT%H.%M.%S")
-          echo dev-${{ steps.extract_branch.outputs.branch }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
-          echo ${{ steps.extract_branch.outputs.branch }}-${date} > build_info/prod_tag_dated
-          echo ${{ steps.extract_branch.outputs.branch }}-latest > build_info/prod_tag_latest
-          echo ${{ steps.extract_branch.outputs.branch }} > build_info/mbed_os_version
-          # echo dev-${{ steps.mbed_os_version.outputs.tag }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
-          # echo ${{ steps.mbed_os_version.outputs.tag }}-${date} > build_info/prod_tag_dated
-          # echo ${{ steps.mbed_os_version.outputs.tag }}-latest > build_info/prod_tag_latest
-          # echo ${{ steps.mbed_os_version.outputs.tag }} > build_info/mbed_os_version
+          # echo dev-${{ steps.extract_branch.outputs.branch }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
+          # echo ${{ steps.extract_branch.outputs.branch }}-${date} > build_info/prod_tag_dated
+          # echo ${{ steps.extract_branch.outputs.branch }}-latest > build_info/prod_tag_latest
+          # echo ${{ steps.extract_branch.outputs.branch }} > build_info/mbed_os_version
+          echo dev-${{ steps.mbed_os_version.outputs.tag }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
+          echo ${{ steps.mbed_os_version.outputs.tag }}-${date} > build_info/prod_tag_dated
+          echo ${{ steps.mbed_os_version.outputs.tag }}-latest > build_info/prod_tag_latest
+          echo ${{ steps.mbed_os_version.outputs.tag }} > build_info/mbed_os_version
 
       # archiving and unarchiving are github actions ways to pass variables between jobs    
       - 
@@ -113,6 +93,8 @@ jobs:
           echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
           value=`cat prod_tag_latest`
           echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
+          value=`cat mbed_os_version`
+          echo "::set-output name=MBED_OS_VERSION::$value"
 
       - 
         name: Set up Docker Buildx
@@ -133,6 +115,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ steps.build_info.outputs.MBED_OS_VERSION }}
 
       -
         name: Build with remote cache
@@ -203,18 +187,12 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ steps.build_info.outputs.MBED_OS_VERSION }}
 
       - 
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-
-      - 
-        name: Find DEV DOCKER DIGEST
-        id: docker_info_dev
-        run: |
-          DIGEST=$(python ./.github/workflows/docker_management/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
 
       - 
         name: test the container
@@ -225,7 +203,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           options: -v ${{ github.workspace }}:/work -w=/work
-          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
+          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           shell: bash
           run: |
             set -e
@@ -281,5 +259,5 @@ jobs:
       - 
         name: Delete Dev image
         run: |
-          python ./.github/workflows/docker_management/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.ANOTHER_GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          # python ./.github/workflows/docker_management/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.ANOTHER_GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          # python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
