--- a/.github/workflows/docker_management.deploy.yml
+++ b/.github/workflows/docker_management.deploy.yml
@@ -1,4 +1,4 @@
-name: publish image to docker hub
+name: Release new dev version of docker image
 
 # The workflow is split into several sub jobs
 # 1. prepare-tags: 
