--- a/.github/workflows/docker_management.passive_update-main.yml
+++ b/.github/workflows/docker_management.passive_update-main.yml
@@ -1,4 +1,4 @@
-name: Update last released docker image (on main branch)
+name: Periodically update last released docker image (on main branch)
 
 on:
   schedule:
