--- a/.github/workflows/docker_management.deploy.yml
+++ b/.github/workflows/docker_management.deploy.yml
@@ -1,4 +1,4 @@
-name: publish image to docker hub
+name: Release new dev version (compatible with LTS branch) of docker image 
 
 # The workflow is split into several sub jobs
 # 1. prepare-tags: 
@@ -23,7 +23,7 @@ name: publish image to docker hub
 
 on:
   schedule:
-    - cron:  '15 4 * * *'
+    - cron:  '*/5 * * * *'
     
   push:
     # on push master build a new image master-latest for example application
@@ -222,6 +222,14 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - 
+        name: Find DEV DOCKER DIGEST
+        id: docker_info_dev
+        run: |
+          DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
+          echo "::set-output name=DIGEST::$DIGEST"
+          echo "Docker DIGEST: $DIGEST"
+
+      - 
         name: test the container
         id: test
         uses: addnab/docker-run-action@v3
@@ -230,7 +238,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           options: -v ${{ github.workspace }}:/work -w=/work
-          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
           shell: bash
           run: |
             set -e
