--- a/.github/workflows/docker_management.passive_update-main.yml
+++ b/.github/workflows/docker_management.passive_update-main.yml
@@ -1,5 +1,4 @@
-name: Periodically update last released docker image (on main branch)
-
+name: Update released docker image (on main branch)
 on:
   schedule:
     - cron:  '*/10 * * * *'
