--- a/.github/workflows/docker_management.passive_update-lts.yml
+++ b/.github/workflows/docker_management.passive_update-lts.yml
@@ -4,18 +4,16 @@ on:
   schedule:
     - cron:  '*/10 * * * *'
 
-  # workflow_dispatch:
-
 jobs:
   prepare-tags:
     runs-on: ubuntu-latest
 
     steps:
-      - 
-        name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+      # - 
+      #   name: Extract branch name
+      #   shell: bash
+      #   run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      #   id: extract_branch
 
       -
         name: Checkout
