--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -26,6 +26,7 @@ on:
   push:
     tags: 
       - mbed-os-6.[0-9]+.[0-9]+
+      - mbed-os-5.[0-9]+.[0-9]+
 
 jobs:
   prepare-tags:
@@ -113,6 +114,8 @@ jobs:
           echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
           value=`cat prod_tag_latest`
           echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
+          value=`cat mbed_os_version`
+          echo "::set-output name=MBED_OS_VERSION::$value"
 
       - 
         name: Set up Docker Buildx
@@ -145,7 +148,7 @@ jobs:
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
           tags: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:main-latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.MBED_OS_VERSION }}-latest
           cache-to: type=inline
 
       -
