--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -37,7 +37,7 @@ jobs:
         name: Extract tag name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/tags/})"
-        id: extract_branch
+        id: extract_tag
 
       -
         name: Checkout
@@ -69,10 +69,10 @@ jobs:
         run: |
           mkdir -p build_info
           date=$(date +"%Y.%m.%dT%H.%M.%S")
-          echo dev-${{ steps.extract_branch.outputs.branch }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
-          echo ${{ steps.extract_branch.outputs.branch }}-${date} > build_info/prod_tag_dated
-          echo ${{ steps.extract_branch.outputs.branch }}-latest > build_info/prod_tag_latest
-          echo ${{ steps.extract_branch.outputs.branch }} > build_info/mbed_os_version
+          echo dev-${{ steps.extract_tag.outputs.branch }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
+          echo ${{ steps.extract_tag.outputs.branch }}-${date} > build_info/prod_tag_dated
+          echo ${{ steps.extract_tag.outputs.branch }}-latest > build_info/prod_tag_latest
+          echo ${{ steps.extract_tag.outputs.branch }} > build_info/mbed_os_version
           # echo dev-${{ steps.mbed_os_version.outputs.tag }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
           # echo ${{ steps.mbed_os_version.outputs.tag }}-${date} > build_info/prod_tag_dated
           # echo ${{ steps.mbed_os_version.outputs.tag }}-latest > build_info/prod_tag_latest
