--- a/.github/workflows/docker_management.deploy.yml
+++ b/.github/workflows/docker_management.deploy.yml
@@ -1,24 +1,4 @@
 name: Publish new dev version of docker image
-# The workflow is split into several sub jobs
-# 1. prepare-tags: 
-#    This step finds the latest mbed-os version (in terms of product version not date)
-#    and generates a unique dev version for the image. 
-#    The DEV docker tag takes the format of dev-<MBED_OS_VERSION>-<human readable date>-<UUID>
-# 2. build-container:
-#    The dev version of image is built here and pushed to docker hub.
-#    When multiarch image is built docker buildx doesn't support exporting to docker
-#    Hence, need to push to a registry (dockerhub).
-# 3. test-container:
-#    This tests the dev docker images
-# 4. deploy-container
-#    At this point, docker image marked as "dev" is ready to tag as "prod"
-#    Also, deletes the dev tag
-#    The dev images that didn't succeed is kept in docker hub for troubleshooting purposes.
-#    Published docker tags are:
-#    1. <MBED_OS_VERSION>-latest
-#    2. <MBED_OS_VERSION>-<human readable date>
-#    3. latest
-#    This can be move with another workflow
 
 on:
   push:
@@ -92,201 +72,201 @@ jobs:
           
 
 
-  build-container:
-    runs-on: ubuntu-latest
-    needs: prepare-tags
-    outputs:
-      DEV_DIGEST: ${{ steps.docker_info_dev.outputs.DIGEST }}
-      PROD_DIGEST: ${{ steps.docker_info_prod.outputs.DIGEST }}
+  # build-container:
+  #   runs-on: ubuntu-latest
+  #   needs: prepare-tags
+  #   outputs:
+  #     DEV_DIGEST: ${{ steps.docker_info_dev.outputs.DIGEST }}
+  #     PROD_DIGEST: ${{ steps.docker_info_prod.outputs.DIGEST }}
 
-    steps:
-      - 
-        name: unarchive artefacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build-info
+  #   steps:
+  #     - 
+  #       name: unarchive artefacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: build-info
           
-      - 
-        name: Get build info from archive
-        shell: bash
-        id: build_info
-        run: |
-          value=`cat dev_tag`
-          echo "DEV TAG is $value"
-          echo "::set-output name=DOCKER_DEV_TAG::$value"
-          value=`cat prod_tag_dated`
-          echo "PROD TAG DATED is $value"
-          echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
-          value=`cat prod_tag_latest`
-          echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
-          echo "PROD TAG is $value"
+  #     - 
+  #       name: Get build info from archive
+  #       shell: bash
+  #       id: build_info
+  #       run: |
+  #         value=`cat dev_tag`
+  #         echo "DEV TAG is $value"
+  #         echo "::set-output name=DOCKER_DEV_TAG::$value"
+  #         value=`cat prod_tag_dated`
+  #         echo "PROD TAG DATED is $value"
+  #         echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
+  #         value=`cat prod_tag_latest`
+  #         echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
+  #         echo "PROD TAG is $value"
 
-      - 
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+  #     - 
+  #       name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
 
-      - 
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+  #     - 
+  #       name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v1
 
-      - 
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - 
+  #       name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      -
-        name: Checkout
-        uses: actions/checkout@v2
+  #     -
+  #       name: Checkout
+  #       uses: actions/checkout@v2
 
-      -
-        name: Build with remote cache
-        uses: docker/build-push-action@v2
-        id: docker_build_dev
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          # load: true - not supported for multi arch
-          push: true
-          file: ./docker_images/mbed-os-env/Dockerfile
-          tags: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }}
-          cache-to: type=inline
+  #     -
+  #       name: Build with remote cache
+  #       uses: docker/build-push-action@v2
+  #       id: docker_build_dev
+  #       with:
+  #         context: .
+  #         platforms: linux/amd64,linux/arm64
+  #         # load: true - not supported for multi arch
+  #         push: true
+  #         file: ./docker_images/mbed-os-env/Dockerfile
+  #         tags: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+  #         cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }}
+  #         cache-to: type=inline
 
-      -
-        name: Find DOCKER DIGEST trying to publish (if exists in docker repository)
-        id: docker_info_prod
-        run: |
-          DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }} | jq ".Digest")
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
+  #     -
+  #       name: Find DOCKER DIGEST trying to publish (if exists in docker repository)
+  #       id: docker_info_prod
+  #       run: |
+  #         DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }} | jq ".Digest")
+  #         echo "::set-output name=DIGEST::$DIGEST"
+  #         echo "Docker DIGEST: $DIGEST"
 
-      - 
-        name: Find DEV DOCKER DIGEST
-        id: docker_info_dev
-        run: |
-          DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }} | jq ".Digest")
-          echo "Docker DIGEST: $DIGEST"
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
+  #     - 
+  #       name: Find DEV DOCKER DIGEST
+  #       id: docker_info_dev
+  #       run: |
+  #         DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }} | jq ".Digest")
+  #         echo "Docker DIGEST: $DIGEST"
+  #         echo "::set-output name=DIGEST::$DIGEST"
+  #         echo "Docker DIGEST: $DIGEST"
 
-  test-container:
-    runs-on: ubuntu-latest
-    needs: build-container
-    # no need to test (nor publish) if we already have the same image in dockerhub
-    if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
-    outputs:
-      STATUS: ${{ steps.test.outputs.STATUS }}
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
-        # platform: [linux/amd64]
+  # test-container:
+  #   runs-on: ubuntu-latest
+  #   needs: build-container
+  #   # no need to test (nor publish) if we already have the same image in dockerhub
+  #   if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
+  #   outputs:
+  #     STATUS: ${{ steps.test.outputs.STATUS }}
+  #   strategy:
+  #     matrix:
+  #       platform: [linux/amd64, linux/arm64]
+  #       # platform: [linux/amd64]
         
-    steps:
-      - 
-        name: unarchive artefacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build-info
+  #   steps:
+  #     - 
+  #       name: unarchive artefacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: build-info
           
-      - 
-        name: Get build info from archive
-        shell: bash
-        id: build_info
-        run: |
-          value=`cat dev_tag`
-          echo "TAG is $value"
-          echo "::set-output name=DOCKER_DEV_TAG::$value"
-          value=`cat prod_tag_dated`
-          echo "TAG is $value"
-          echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
-          value=`cat prod_tag_latest`
-          echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
-          value=`cat mbed_os_version`
-          echo "::set-output name=MBED_OS_VERSION::$value"
+  #     - 
+  #       name: Get build info from archive
+  #       shell: bash
+  #       id: build_info
+  #       run: |
+  #         value=`cat dev_tag`
+  #         echo "TAG is $value"
+  #         echo "::set-output name=DOCKER_DEV_TAG::$value"
+  #         value=`cat prod_tag_dated`
+  #         echo "TAG is $value"
+  #         echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
+  #         value=`cat prod_tag_latest`
+  #         echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
+  #         value=`cat mbed_os_version`
+  #         echo "::set-output name=MBED_OS_VERSION::$value"
 
-      - 
-        name: Checkout
-        uses: actions/checkout@v2
+  #     - 
+  #       name: Checkout
+  #       uses: actions/checkout@v2
 
-      - 
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+  #     - 
+  #       name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v1
 
-      - 
-        name: Find DEV DOCKER DIGEST
-        id: docker_info_dev
-        run: |
-          DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
+  #     - 
+  #       name: Find DEV DOCKER DIGEST
+  #       id: docker_info_dev
+  #       run: |
+  #         DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
+  #         echo "::set-output name=DIGEST::$DIGEST"
+  #         echo "Docker DIGEST: $DIGEST"
 
-      - 
-        name: test the container
-        id: test
-        uses: addnab/docker-run-action@v3
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
-          options: -v ${{ github.workspace }}:/work -w=/work
-          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
-          shell: bash
-          run: |
-            set -e
-            echo "::set-output name=STATUS::failed"
-            uname -m
-            ./docker_images/mbed-os-env/test.sh ${{ steps.build_info.outputs.MBED_OS_VERSION }}
-            echo "::set-output name=STATUS::passed"
+  #     - 
+  #       name: test the container
+  #       id: test
+  #       uses: addnab/docker-run-action@v3
+  #       with:
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #         registry: ghcr.io
+  #         options: -v ${{ github.workspace }}:/work -w=/work
+  #         image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
+  #         shell: bash
+  #         run: |
+  #           set -e
+  #           echo "::set-output name=STATUS::failed"
+  #           uname -m
+  #           ./docker_images/mbed-os-env/test.sh ${{ steps.build_info.outputs.MBED_OS_VERSION }}
+  #           echo "::set-output name=STATUS::passed"
             
       
-  deploy-container:
-    runs-on: ubuntu-latest
-    needs: test-container
-    if:  ${{ always() }}
+  # deploy-container:
+  #   runs-on: ubuntu-latest
+  #   needs: test-container
+  #   if:  ${{ always() }}
         
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
+  #   steps:
+  #     -
+  #       name: Checkout
+  #       uses: actions/checkout@v2
 
-      - 
-        name: unarchive artefacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build-info
+  #     - 
+  #       name: unarchive artefacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: build-info
         
-      - 
-        name: Get build info from archive
-        shell: bash
-        id: build_info
-        run: |
-          value=`cat dev_tag`
-          echo "TAG is $value"
-          echo "::set-output name=DOCKER_DEV_TAG::$value"
-          value=`cat prod_tag_dated`
-          echo "TAG is $value"
-          echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
-          value=`cat prod_tag_latest`
-          echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
+  #     - 
+  #       name: Get build info from archive
+  #       shell: bash
+  #       id: build_info
+  #       run: |
+  #         value=`cat dev_tag`
+  #         echo "TAG is $value"
+  #         echo "::set-output name=DOCKER_DEV_TAG::$value"
+  #         value=`cat prod_tag_dated`
+  #         echo "TAG is $value"
+  #         echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
+  #         value=`cat prod_tag_latest`
+  #         echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
           
-      - 
-        if: needs.test-container.outputs.STATUS == 'passed'
-        name: copy dev tag to prod
-        run: |
-          docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }}
-          docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_DATED }}
-          docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:latest
+  #     - 
+  #       if: needs.test-container.outputs.STATUS == 'passed'
+  #       name: copy dev tag to prod
+  #       run: |
+  #         docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }}
+  #         docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_DATED }}
+  #         docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env:latest
       
-      - if: needs.test-container.outputs.STATUS == 'failed'
-        name: Rename Dev Tag
-        run: |
-          docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:failed-${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+  #     - if: needs.test-container.outputs.STATUS == 'failed'
+  #       name: Rename Dev Tag
+  #       run: |
+  #         docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:failed-${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
 
-      - 
-        name: Delete Dev image
-        run: |
-          python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.ANOTHER_GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          # python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+  #     - 
+  #       name: Delete Dev image
+  #       run: |
+  #         python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.ANOTHER_GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+  #         # python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
