--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -45,6 +45,11 @@ jobs:
         run: | 
           echo "Log level: ${{ github.event.inputs.mbed_os_release_version }}"
           echo "${GITHUB_REF}"
+          if [ -z ${{ github.event.inputs.mbed_os_release_version }} ];then
+            echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
+          else
+            echo "::set-output name=tag::${{ github.event.inputs.mbed_os_release_version }}"
+          fi
           echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
         id: extract_tag
 
