--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -48,7 +48,7 @@ jobs:
           if [ -z ${{ github.event.inputs.mbed_os_release_version }} ];then
             echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
           else
-            echo "::set-output name=tag::${{ github.event.inputs.mbed_os_release_version }}"
+            echo "::set-output name=tag::refs/tag/${{ github.event.inputs.mbed_os_release_version }}"
           fi
         id: extract_tag
 
