--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -256,11 +256,6 @@ jobs:
     if:  ${{ always() }}
         
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: refs/tags/${{ steps.build_info.outputs.MBED_OS_VERSION }}
 
       - 
         name: unarchive artefacts
@@ -281,7 +276,15 @@ jobs:
           echo "::set-output name=DOCKER_PROD_TAG_DATED::$value"
           value=`cat prod_tag_latest`
           echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
+          value=`cat mbed_os_version`
+          echo "::set-output name=MBED_OS_VERSION::$value"
           
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: refs/tags/${{ steps.build_info.outputs.MBED_OS_VERSION }}
+
       - 
         if: needs.test-container.outputs.STATUS == 'passed'
         name: copy dev tag to prod
