--- a/.github/workflows/docker_management.passive_update-lts.yml
+++ b/.github/workflows/docker_management.passive_update-lts.yml
@@ -1,5 +1,5 @@
 # use this workflow for updating a released production docker image
-name: Update released docker image (on lts branch)
+name: Auto update released docker image (on lts branch)
 on:
   schedule:
     - cron:  '15 4 * * *'
