--- a/.github/workflows/docker_management.passive_update-main.yml
+++ b/.github/workflows/docker_management.passive_update-main.yml
@@ -1,8 +1,8 @@
 # use this workflow for updating a released production docker image
-name: Update released docker image (on main branch)
+name: Auto update released docker image (on lts branch)
 on:
   schedule:
-    - cron:  '* * * * *'
+    - cron:  '*/10 * * * *'
 
 jobs:
   prepare-tags:
