--- a/.github/workflows/docker_management.passive_update-main.yml
+++ b/.github/workflows/docker_management.passive_update-main.yml
@@ -1,5 +1,5 @@
 # use this workflow for updating a released production docker image
-name: Auto update released docker image (on lts branch)
+name: Auto update released docker image (on main branch)
 on:
   schedule:
     - cron:  '*/10 * * * *'
