--- a/.github/workflows/docker_management.passive_update-main.yml
+++ b/.github/workflows/docker_management.passive_update-main.yml
@@ -2,7 +2,7 @@
 name: Auto update released docker image (on main branch)
 on:
   schedule:
-    - cron:  '*/10 * * * *'
+    - cron:  '15 4 * * *'
 
 jobs:
   prepare-tags:
