--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -89,11 +89,11 @@ jobs:
           # if workflow is executed manually; then take cache from the tagged version
           # if workflow is executed because of a new tag; cache is taken from head of the branch
           if [ "workflow_dispatch" == "${{github.event_name}}" ];then
-            value=${{ github.event.inputs.mbed_os_release_version }}
+            value="${{ github.event.inputs.mbed_os_release_version }}"
             echo ${{ value }}
             echo ${{ value }} > build_info/cache_source
           else
-            value=`git branch --contains ${GITHUB_REF} |cut -d' ' -f2`
+            # value=`git branch --contains ${GITHUB_REF} |cut -d' ' -f2`
             echo ${{ value }}
             echo ${{ value }} > build_info/cache_source
             
